# awakener

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  awakener.conf  lighttpd.conf  main.c  server.c  server.h
esp32/awakener/: platformio.ini  update_flags.py
esp32/awakener/src/: main.cpp
public/: index.html
src/: server.c  server.h
tests/: check_request.c
